# trademaster

./: .env  README.md  pyproject.toml
api/: dockerfile
api/manifests/: deployment.yaml  service.yaml
api/src/: app.py  requirements.txt  start.sh
api/src/config/: config.py  logger.py
api/src/consumer/: consumer.py
api/src/helpers/: processor.py
api/src/producer/: producer.py
api/src/schema/: schema.py
kafka-ui/: deployment.yaml  namespace.yaml  service.yaml
postgres/: docker-compose.yaml  sql.sql
postgres/src/: populate_db.py
strimzi/manifests/: kafka.yaml  kafkatopic.yaml  namespace.yaml
